# example

./: .gitignore
cpp/: CMakeLists.txt  ReadMe.md  clean.sh
cpp/algorithm/: CMakeLists.txt
cpp/algorithm/calibration/: CMakeLists.txt  ReadMe.md  handeye_test.cpp
cpp/algorithm/calibration/handeye/: navy_calibration.cpp  navy_calibration.h  tsai_calibration.cpp  tsai_calibration.h
cpp/algorithm/db/: CMakeLists.txt  test_where.cpp
cpp/algorithm/geometry/: CMakeLists.txt  convex_hull.cpp  polygon_union.cpp
cpp/algorithm/heart/: CMakeLists.txt  Heart.cpp  Heart.h  IHeart.h  IRegistry.h  Registry.cpp  Registry.h  new_traffic_server.cpp
cpp/algorithm/heart/cmake_modules/: FindProtobufWithTargets.cmake  FindgRPC.cmake  protoc.cmake
cpp/algorithm/heart/proto/automotive_ai/common/: new_traffic_vehicle.pb.cc  new_traffic_vehicle.pb.h  new_traffic_vehicle.proto
cpp/algorithm/heart/proto/automotive_ai/heart/: heart_service.grpc.pb.cc  heart_service.grpc.pb.h  heart_service.pb.cc  heart_service.pb.h  heart_service.proto  heart_service_mock.grpc.pb.h
cpp/algorithm/heart/proto/automotive_ai/world/: new_traffic_service.grpc.pb.cc  new_traffic_service.grpc.pb.h  new_traffic_service.pb.cc  new_traffic_service.pb.h  new_traffic_service.proto  new_traffic_service_mock.grpc.pb.h
cpp/algorithm/heart/proto/google/api/: annotations.pb.cc  annotations.pb.h  http.pb.cc  http.pb.h
cpp/algorithm/heart/proto/google/protobuf/: empty.pb.h
cpp/algorithm/memory_pool/: CMakeLists.txt  ReadMe.md  boost_pool_example.cpp  cxx_alloc_example.cpp  malloc_free_example.cpp
cpp/algorithm/memory_pool/Alloc/: AllocContainer.h  AllocTraits.h  AllocType.h
cpp/algorithm/ml/: CMakeLists.txt  linear_regression_test.cpp  logistic_regression_test.cpp
cpp/algorithm/ml/ml_lib/: linear_regression.cpp  linear_regression.h  logistic_regression.cpp  logistic_regression.h  ml_def.h  ml_util.h
cpp/algorithm/mvg/: CMakeLists.txt  algeba_test.cpp  dlt_test.cpp  mvg_test.cpp  ransac_test.cpp  util_test.cpp
cpp/algorithm/mvg/mvglib/: algeba.cpp  algeba.h  dlt.cpp  dlt.h  iteration.cpp  iteration.h  mvg_def.cpp  mvg_def.h  mvg_util.cpp  mvg_util.h  ransac.cpp  ransac.h
cpp/algorithm/pc2img/: CMakeLists.txt  Grid.cpp  Grid.h  ImgUtil.h  occupy_grid.cpp  split_img.cpp
cpp/algorithm/schedule/: CMakeLists.txt  ScheduleSolver.h  ViolenceSolver.cpp  ViolenceSolver.h  schedule_test.cpp  solver_util.h
cpp/basic/: A.cpp  A.h  CMakeLists.txt  test_asycn.cpp  test_char.cpp  test_class.cpp  test_container.cpp  test_enum.cpp  test_ios.cpp  test_number.cpp  test_operator.cpp  test_pointer.cpp  test_shared_ptr.cpp  test_static.cpp  test_stl.cpp  test_template.cpp  test_unique_ptr.cpp
cpp/cmake/: FindMongoClient.cmake  FindPugiXML.cmake  FindPythonLibsNew.cmake  FindgRPC++.cmake  protoc.cmake
cpp/project/: CMakeLists.txt
cpp/project/app/: CMakeLists.txt  use_shared_shared.cpp  use_static_shared.cpp  use_static_static.cpp
cpp/project/shared_lib/: CMakeLists.txt  shared_lib.cpp  shared_lib.h
cpp/project/shared_shared_lib/: CMakeLists.txt  shared_shared_lib.cpp  shared_shared_lib.h
cpp/project/static_lib/: CMakeLists.txt  static_lib.cpp  static_lib.h
cpp/project/static_shared_lib/: CMakeLists.txt  static_shared_lib.cpp  static_shared_lib.h
cpp/project/static_static_lib/: CMakeLists.txt  static_static_lib.cpp  static_static_lib.h
markdown/: image.md  math.md
md/: hello.md
python/config/: test.ini
python/src/construct/: test_construct.py
python/src/example/: test__string.py  test_basic.py  test_binary.py  test_class.py  test_closure.py  test_decorator.py  test_dir.py  test_enumerate.py  test_function.py  test_generator.py  test_iteration.py  test_logging.py  test_map_reduce.py  test_metaclass.py  test_type.py  test_unittest.py  test_variable_region.py
python/src/example/app/: app.py
python/src/example/mylib/: __main__.py  lib.py
python/src/gdal/: test_geo.py
python/src/morton/: latlon_to_morton.py
python/src/proto/: do_protobuf.py
python/src/proto/type/: SearchRequest.proto  SearchRequest_pb2.py  Test.proto  Test_pb2.py
python/src/url/: do_crawler.py  do_http_get_client.py  do_http_post_client.py  do_http_server.py  do_tcp_client.py  do_tcp_server.py  do_udp_client.py  do_udp_server.py
python/src/webserver/django/: db.sqlite3  manage.py  uwsgi.ini  uwsgi_test.py
python/src/webserver/django/WhuBooksSite/: settings.py  urls.py  wsgi.py
python/src/webserver/django/polls/: models.py  urls.py  views.py
python/src/webserver/django/polls/migrations/: 0001_initial.py
python/src/webserver/flask/: do_cookies.py  do_error.py  do_methods.py  do_redirect.py  do_response.py  do_route.py  do_upload.py  do_url.py
python/src/webserver/tornado/: Hello.py  asynchronous.py  crawer.py
python/src/webserver/web.py/: Hello.py
python/tests/: context.py
sphinx/: conf.py  index.rst
sphinx/doc/: first_test.rst  fourth_test.rst  hello.cpp  second_test.rst  third_test.rst
